# UFF-EDA-Trabalho-Computacional

./: .gitignore  CMakeLists.txt  PadraoProjeto.txt  README.md  build.sh  reports.c  runBuild.sh  runTests.sh
libs/: BPlusTree.c  BPlusTree.h  BinarySearchTree.c  BinarySearchTree.h  BinaryTree.c  BinaryTree.h  GenericImplementations.h  GenericTypes.h  HashMap.c  HashMap.h  HashUtils.c  HashUtils.h  LinkedList.c  LinkedList.h  LinkedListTypes.h
prototipo/: CMakeLists.txt  bplus_tree.c  bplus_tree.h  bplus_tree_io.c  bplus_tree_io.h  data_parser.c  data_parser.h  hash_table.c  hash_table.h  hash_table_year.c  hash_table_year.h  main.c  main_hash_test.c  operations.c  operations.h  pendencias.txt  ranking_manager.c  ranking_manager.h  reports.c  reports.h  tabela_hash_pais.c  tabela_hash_pais.h  teste.c  title_manager.c  title_manager.h  underdog_manager.c  underdog_manager.h
src/: Main.c  main.c
src/models/: ChampionshipInfo.c  ChampionshipInfo.h  EstandarteAward.c  EstandarteAward.h  IndividualInfo.c  IndividualInfo.h  Participation.c  Participation.h  SchoolInfo.c  SchoolInfo.h  YearInfo.c  YearInfo.h
test/: TestBPlusTree.c  TestBinarySearchTree.c  TestBinaryTree.c  TestHashMap.c  TestHashUtils.c  TestLinkedList.c  Tester.h
